Previous-Year-Codes/A6_42/A6_42.output
Terminals unused in grammar

    INVALID_TOKEN


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | CHARACTER_CONSTANT
    4                   | STRING_LITERAL
    5                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES

    6 postfix_expression: primary_expression
    7                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    8                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
    9                   | postfix_expression ARROW IDENTIFIER
   10                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   11                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

   12 argument_expression_list_opt: argument_expression_list
   13                             | ε

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list COMMA assignment_expression

   16 unary_expression: postfix_expression
   17                 | unary_operator unary_expression

   18 unary_operator: ASTERISK
   19               | PLUS
   20               | MINUS
   21               | EXCLAMATION
   22               | ADDRESS

   23 multiplicative_expression: unary_expression
   24                          | multiplicative_expression ASTERISK unary_expression
   25                          | multiplicative_expression SLASH unary_expression
   26                          | multiplicative_expression MODULO unary_expression

   27 additive_expression: multiplicative_expression
   28                    | additive_expression PLUS multiplicative_expression
   29                    | additive_expression MINUS multiplicative_expression

   30 relational_expression: additive_expression
   31                      | relational_expression LESS_THAN additive_expression
   32                      | relational_expression GREATER_THAN additive_expression
   33                      | relational_expression LESS_EQUAL_THAN additive_expression
   34                      | relational_expression GREATER_EQUAL_THAN additive_expression

   35 equality_expression: relational_expression
   36                    | equality_expression EQUALS relational_expression
   37                    | equality_expression NOT_EQUALS relational_expression

   38 M: ε

   39 N: ε

   40 logical_AND_expression: equality_expression
   41                       | logical_AND_expression LOGICAL_AND M equality_expression

   42 logical_OR_expression: logical_AND_expression
   43                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   44 conditional_expression: logical_OR_expression
   45                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   46 assignment_expression: conditional_expression
   47                      | unary_expression ASSIGNMENT assignment_expression

   48 expression: assignment_expression
   49           | expression COMMA assignment_expression

   50 constant_expression: conditional_expression

   51 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   52 init_declarator_list_opt: init_declarator_list
   53                         | ε

   54 declaration_specifiers: type_specifier declaration_specifiers_opt
   55                       | type_qualifier declaration_specifiers_opt

   56 declaration_specifiers_opt: declaration_specifiers
   57                           | ε

   58 init_declarator_list: init_declarator
   59                     | init_declarator_list COMMA init_declarator

   60 init_declarator: declarator
   61                | declarator ASSIGNMENT initialiser

   62 type_specifier: VOIDTYPE
   63               | INTTYPE

   64 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   65                         | type_qualifier specifier_qualifier_list_opt

   66 specifier_qualifier_list_opt: specifier_qualifier_list
   67                             | ε

   68 type_qualifier: CONST

   69 declarator: pointer direct_declarator
   70           | direct_declarator

   71 change_scope: ε

   72 direct_declarator: IDENTIFIER
   73                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   74                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

   83 type_qualifier_list_opt: type_qualifier_list
   84                        | ε

   85 pointer: ASTERISK type_qualifier_list_opt
   86        | ASTERISK type_qualifier_list_opt pointer

   87 type_qualifier_list: type_qualifier
   88                    | type_qualifier_list type_qualifier

   89 parameter_type_list: parameter_list

   90 parameter_list: parameter_declaration
   91               | parameter_list COMMA parameter_declaration

   92 parameter_declaration: declaration_specifiers declarator
   93                      | declaration_specifiers

   94 identifier_list: IDENTIFIER
   95                | identifier_list COMMA IDENTIFIER

   96 type_name: specifier_qualifier_list

   97 initialiser: assignment_expression
   98            | LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   99            | LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

  100 initialiser_list: designation_opt initialiser
  101                 | initialiser_list COMMA designation_opt initialiser

  102 designation_opt: designation
  103                | ε

  104 designation: designator_list ASSIGNMENT

  105 designator_list: designator
  106                | designator_list designator

  107 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET

  108 statement: compound_statement
  109          | expression_statement
  110          | selection_statement
  111          | iteration_statement
  112          | jump_statement

  113 compound_statement: LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

  114 block_item_list_opt: block_item_list
  115                    | ε

  116 block_item_list: block_item
  117                | block_item_list M block_item

  118 block_item: declaration
  119           | statement

  120 expression_statement: expression_opt SEMI_COLON

  121 expression_opt: expression
  122               | ε

  123 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N
  124                    | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N ELSE M statement

  125 iteration_statement: FOR LEFT_PARENTHESES expression_opt SEMI_COLON M expression_opt SEMI_COLON M expression_opt N RIGHT_PARENTHESES M statement
  126                    | FOR LEFT_PARENTHESES declaration expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESES statement

  127 jump_statement: RETURN expression_opt SEMI_COLON

  128 translation_unit: external_declaration
  129                 | translation_unit external_declaration

  130 external_declaration: function_definition
  131                     | declaration

  132 function_definition: declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

  133 declaration_list_opt: declaration_list
  134                     | ε

  135 declaration_list: declaration
  136                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CONST (258) 68
    ELSE (259) 124
    FOR (260) 125 126
    IF (261) 123 124
    ADDRESS (262) 22
    INTTYPE (263) 63
    RETURN (264) 127
    INVALID_TOKEN (265)
    VOIDTYPE (266) 62
    IDENTIFIER <symbol> (267) 1 9 72 94 95
    INTEGER_CONSTANT <intVal> (268) 2
    CHARACTER_CONSTANT <charVal> (269) 3
    STRING_LITERAL <stringVal> (270) 4
    LEFT_SQUARE_BRACKET (271) 7 74 75 76 77 78 79 107
    SLASH (272) 25
    QUESTION_MARK (273) 45
    ASSIGNMENT (274) 47 61 104
    COMMA (275) 11 15 49 59 91 95 99 101
    RIGHT_SQUARE_BRACKET (276) 7 74 75 76 77 78 79 107
    LEFT_PARENTHESES (277) 5 8 10 11 73 80 81 82 123 124 125 126
    LEFT_CURLY_BRACKET (278) 10 11 98 99 113 132
    RIGHT_CURLY_BRACKET (279) 10 11 98 99 113 132
    ARROW (280) 9
    ASTERISK (281) 18 24 78 79 85 86
    PLUS (282) 19 28
    MINUS (283) 20 29
    EXCLAMATION (284) 21
    MODULO (285) 26
    LESS_THAN (286) 31
    GREATER_THAN (287) 32
    LESS_EQUAL_THAN (288) 33
    GREATER_EQUAL_THAN (289) 34
    COLON (290) 45
    SEMI_COLON (291) 51 120 125 126 127
    RIGHT_PARENTHESES (292) 5 8 10 11 73 80 81 82 123 124 125 126
    EQUALS (293) 36
    LOGICAL_AND (294) 41
    LOGICAL_OR (295) 43
    NOT_EQUALS (296) 37
    THEN (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    primary_expression <expression> (44)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <array> (45)
        on left: 6 7 8 9 10 11
        on right: 7 8 9 16
    argument_expression_list_opt <parameterCount> (46)
        on left: 12 13
        on right: 8
    argument_expression_list <parameterCount> (47)
        on left: 14 15
        on right: 12 15
    unary_expression <array> (48)
        on left: 16 17
        on right: 17 23 24 25 26 47
    unary_operator <unaryOperator> (49)
        on left: 18 19 20 21 22
        on right: 17
    multiplicative_expression <expression> (50)
        on left: 23 24 25 26
        on right: 24 25 26 27 28 29
    additive_expression <expression> (51)
        on left: 27 28 29
        on right: 28 29 30 31 32 33 34
    relational_expression <expression> (52)
        on left: 30 31 32 33 34
        on right: 31 32 33 34 35 36 37
    equality_expression <expression> (53)
        on left: 35 36 37
        on right: 36 37 40 41
    M <instructionNumber> (54)
        on left: 38
        on right: 41 43 45 117 123 124 125
    N <statement> (55)
        on left: 39
        on right: 45 123 124 125
    logical_AND_expression <expression> (56)
        on left: 40 41
        on right: 41 42 43
    logical_OR_expression <expression> (57)
        on left: 42 43
        on right: 43 44 45
    conditional_expression <expression> (58)
        on left: 44 45
        on right: 45 46 50
    assignment_expression <expression> (59)
        on left: 46 47
        on right: 14 15 47 48 49 74 76 97
    expression <expression> (60)
        on left: 48 49
        on right: 5 7 45 49 121 123 124
    constant_expression (61)
        on left: 50
        on right: 107
    declaration (62)
        on left: 51
        on right: 118 126 131 135 136
    init_declarator_list_opt (63)
        on left: 52 53
        on right: 51
    declaration_specifiers (64)
        on left: 54 55
        on right: 51 56 92 93 132
    declaration_specifiers_opt (65)
        on left: 56 57
        on right: 54 55
    init_declarator_list (66)
        on left: 58 59
        on right: 52 59
    init_declarator <symbol> (67)
        on left: 60 61
        on right: 58 59
    type_specifier (68)
        on left: 62 63
        on right: 54 64
    specifier_qualifier_list (69)
        on left: 64 65
        on right: 66 96
    specifier_qualifier_list_opt (70)
        on left: 66 67
        on right: 64 65
    type_qualifier (71)
        on left: 68
        on right: 55 65 87 88
    declarator <symbol> (72)
        on left: 69 70
        on right: 60 61 73 92 132
    change_scope (73)
        on left: 71
        on right: 80 82 132
    direct_declarator <symbol> (74)
        on left: 72 73 74 75 76 77 78 79 80 81 82
        on right: 69 70 74 75 76 77 78 79 80 81 82
    type_qualifier_list_opt (75)
        on left: 83 84
        on right: 85 86
    pointer <symbolType> (76)
        on left: 85 86
        on right: 69 86
    type_qualifier_list (77)
        on left: 87 88
        on right: 74 75 78 83 88
    parameter_type_list (78)
        on left: 89
        on right: 80
    parameter_list (79)
        on left: 90 91
        on right: 89 91
    parameter_declaration (80)
        on left: 92 93
        on right: 90 91
    identifier_list (81)
        on left: 94 95
        on right: 81 95
    type_name (82)
        on left: 96
        on right: 10 11
    initialiser <symbol> (83)
        on left: 97 98 99
        on right: 61 100 101
    initialiser_list (84)
        on left: 100 101
        on right: 10 11 98 99 101
    designation_opt (85)
        on left: 102 103
        on right: 100 101
    designation (86)
        on left: 104
        on right: 102
    designator_list (87)
        on left: 105 106
        on right: 104 106
    designator (88)
        on left: 107
        on right: 105 106
    statement <statement> (89)
        on left: 108 109 110 111 112
        on right: 119 123 124 125 126
    compound_statement <statement> (90)
        on left: 113
        on right: 108
    block_item_list_opt <statement> (91)
        on left: 114 115
        on right: 113 132
    block_item_list <statement> (92)
        on left: 116 117
        on right: 114 117
    block_item <statement> (93)
        on left: 118 119
        on right: 116 117
    expression_statement <expression> (94)
        on left: 120
        on right: 109
    expression_opt <expression> (95)
        on left: 121 122
        on right: 120 125 126 127
    selection_statement <statement> (96)
        on left: 123 124
        on right: 110
    iteration_statement <statement> (97)
        on left: 125 126
        on right: 111
    jump_statement <statement> (98)
        on left: 127
        on right: 112
    translation_unit (99)
        on left: 128 129
        on right: 0 129
    external_declaration (100)
        on left: 130 131
        on right: 128 129
    function_definition (101)
        on left: 132
        on right: 130
    declaration_list_opt (102)
        on left: 133 134
        on right: 132
    declaration_list (103)
        on left: 135 136
        on right: 133 136


State 0

    0 $accept: • translation_unit $end
   51 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   54 declaration_specifiers: • type_specifier declaration_specifiers_opt
   55                       | • type_qualifier declaration_specifiers_opt
   62 type_specifier: • VOIDTYPE
   63               | • INTTYPE
   68 type_qualifier: • CONST
  128 translation_unit: • external_declaration
  129                 | • translation_unit external_declaration
  130 external_declaration: • function_definition
  131                     | • declaration
  132 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    CONST     shift, and go to state 1
    INTTYPE   shift, and go to state 2
    VOIDTYPE  shift, and go to state 3

    declaration             go to state 4
    declaration_specifiers  go to state 5
    type_specifier          go to state 6
    type_qualifier          go to state 7
    translation_unit        go to state 8
    external_declaration    go to state 9
    function_definition     go to state 10


State 1

   68 type_qualifier: CONST •

    $default  reduce using rule 68 (type_qualifier)


State 2

   63 type_specifier: INTTYPE •

    $default  reduce using rule 63 (type_specifier)


State 3

   62 type_specifier: VOIDTYPE •

    $default  reduce using rule 62 (type_specifier)


State 4

  131 external_declaration: declaration •

    $default  reduce using rule 131 (external_declaration)


State 5

   51 declaration: declaration_specifiers • init_declarator_list_opt SEMI_COLON
   52 init_declarator_list_opt: • init_declarator_list
   53                         | ε •  [SEMI_COLON]
   58 init_declarator_list: • init_declarator
   59                     | • init_declarator_list COMMA init_declarator
   60 init_declarator: • declarator
   61                | • declarator ASSIGNMENT initialiser
   69 declarator: • pointer direct_declarator
   70           | • direct_declarator
   72 direct_declarator: • IDENTIFIER
   73                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   74                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   85 pointer: • ASTERISK type_qualifier_list_opt
   86        | • ASTERISK type_qualifier_list_opt pointer
  132 function_definition: declaration_specifiers • declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    IDENTIFIER        shift, and go to state 11
    LEFT_PARENTHESES  shift, and go to state 12
    ASTERISK          shift, and go to state 13

    $default  reduce using rule 53 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 14
    init_declarator_list      go to state 15
    init_declarator           go to state 16
    declarator                go to state 17
    direct_declarator         go to state 18
    pointer                   go to state 19


State 6

   54 declaration_specifiers: • type_specifier declaration_specifiers_opt
   54                       | type_specifier • declaration_specifiers_opt
   55                       | • type_qualifier declaration_specifiers_opt
   56 declaration_specifiers_opt: • declaration_specifiers
   57                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   62 type_specifier: • VOIDTYPE
   63               | • INTTYPE
   68 type_qualifier: • CONST

    CONST     shift, and go to state 1
    INTTYPE   shift, and go to state 2
    VOIDTYPE  shift, and go to state 3

    $default  reduce using rule 57 (declaration_specifiers_opt)

    declaration_specifiers      go to state 20
    declaration_specifiers_opt  go to state 21
    type_specifier              go to state 6
    type_qualifier              go to state 7


State 7

   54 declaration_specifiers: • type_specifier declaration_specifiers_opt
   55                       | • type_qualifier declaration_specifiers_opt
   55                       | type_qualifier • declaration_specifiers_opt
   56 declaration_specifiers_opt: • declaration_specifiers
   57                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   62 type_specifier: • VOIDTYPE
   63               | • INTTYPE
   68 type_qualifier: • CONST

    CONST     shift, and go to state 1
    INTTYPE   shift, and go to state 2
    VOIDTYPE  shift, and go to state 3

    $default  reduce using rule 57 (declaration_specifiers_opt)

    declaration_specifiers      go to state 20
    declaration_specifiers_opt  go to state 22
    type_specifier              go to state 6
    type_qualifier              go to state 7


State 8

    0 $accept: translation_unit • $end
   51 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   54 declaration_specifiers: • type_specifier declaration_specifiers_opt
   55                       | • type_qualifier declaration_specifiers_opt
   62 type_specifier: • VOIDTYPE
   63               | • INTTYPE
   68 type_qualifier: • CONST
  129 translation_unit: translation_unit • external_declaration
  130 external_declaration: • function_definition
  131                     | • declaration
  132 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    $end      shift, and go to state 23
    CONST     shift, and go to state 1
    INTTYPE   shift, and go to state 2
    VOIDTYPE  shift, and go to state 3

    declaration             go to state 4
    declaration_specifiers  go to state 5
    type_specifier          go to state 6
    type_qualifier          go to state 7
    external_declaration    go to state 24
    function_definition     go to state 10


State 9

  128 translation_unit: external_declaration •

    $default  reduce using rule 128 (translation_unit)


State 10

  130 external_declaration: function_definition •

    $default  reduce using rule 130 (external_declaration)


State 11

   72 direct_declarator: IDENTIFIER •

    $default  reduce using rule 72 (direct_declarator)


State 12

   69 declarator: • pointer direct_declarator
   70           | • direct_declarator
   72 direct_declarator: • IDENTIFIER
   73                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   73                  | LEFT_PARENTHESES • declarator RIGHT_PARENTHESES
   74                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   85 pointer: • ASTERISK type_qualifier_list_opt
   86        | • ASTERISK type_qualifier_list_opt pointer

    IDENTIFIER        shift, and go to state 11
    LEFT_PARENTHESES  shift, and go to state 12
    ASTERISK          shift, and go to state 13

    declarator         go to state 25
    direct_declarator  go to state 18
    pointer            go to state 19


State 13

   68 type_qualifier: • CONST
   83 type_qualifier_list_opt: • type_qualifier_list
   84                        | ε •  [IDENTIFIER, LEFT_PARENTHESES, ASTERISK]
   85 pointer: ASTERISK • type_qualifier_list_opt
   86        | ASTERISK • type_qualifier_list_opt pointer
   87 type_qualifier_list: • type_qualifier
   88                    | • type_qualifier_list type_qualifier

    CONST  shift, and go to state 1

    $default  reduce using rule 84 (type_qualifier_list_opt)

    type_qualifier           go to state 26
    type_qualifier_list_opt  go to state 27
    type_qualifier_list      go to state 28


State 14

   51 declaration: declaration_specifiers init_declarator_list_opt • SEMI_COLON

    SEMI_COLON  shift, and go to state 29


State 15

   52 init_declarator_list_opt: init_declarator_list •  [SEMI_COLON]
   59 init_declarator_list: init_declarator_list • COMMA init_declarator

    COMMA  shift, and go to state 30

    $default  reduce using rule 52 (init_declarator_list_opt)


State 16

   58 init_declarator_list: init_declarator •

    $default  reduce using rule 58 (init_declarator_list)


State 17

   51 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   54 declaration_specifiers: • type_specifier declaration_specifiers_opt
   55                       | • type_qualifier declaration_specifiers_opt
   60 init_declarator: declarator •  [COMMA, SEMI_COLON]
   61                | declarator • ASSIGNMENT initialiser
   62 type_specifier: • VOIDTYPE
   63               | • INTTYPE
   68 type_qualifier: • CONST
  132 function_definition: declaration_specifiers declarator • declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET
  133 declaration_list_opt: • declaration_list
  134                     | ε •  [LEFT_CURLY_BRACKET]
  135 declaration_list: • declaration
  136                 | • declaration_list declaration

    CONST       shift, and go to state 1
    INTTYPE     shift, and go to state 2
    VOIDTYPE    shift, and go to state 3
    ASSIGNMENT  shift, and go to state 31

    LEFT_CURLY_BRACKET  reduce using rule 134 (declaration_list_opt)
    $default            reduce using rule 60 (init_declarator)

    declaration             go to state 32
    declaration_specifiers  go to state 33
    type_specifier          go to state 6
    type_qualifier          go to state 7
    declaration_list_opt    go to state 34
    declaration_list        go to state 35


State 18

   70 declarator: direct_declarator •  [CONST, INTTYPE, VOIDTYPE, ASSIGNMENT, COMMA, LEFT_CURLY_BRACKET, SEMI_COLON, RIGHT_PARENTHESES]
   74 direct_declarator: direct_declarator • LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | direct_declarator • LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | direct_declarator • LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | direct_declarator • LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | direct_declarator • LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | direct_declarator • LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | direct_declarator • LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | direct_declarator • LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | direct_declarator • LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

    LEFT_SQUARE_BRACKET  shift, and go to state 36
    LEFT_PARENTHESES     shift, and go to state 37

    $default  reduce using rule 70 (declarator)


State 19

   69 declarator: pointer • direct_declarator
   72 direct_declarator: • IDENTIFIER
   73                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   74                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

    IDENTIFIER        shift, and go to state 11
    LEFT_PARENTHESES  shift, and go to state 12

    direct_declarator  go to state 38


State 20

   56 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 56 (declaration_specifiers_opt)


State 21

   54 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 54 (declaration_specifiers)


State 22

   55 declaration_specifiers: type_qualifier declaration_specifiers_opt •

    $default  reduce using rule 55 (declaration_specifiers)


State 23

    0 $accept: translation_unit $end •

    $default  accept


State 24

  129 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 129 (translation_unit)


State 25

   73 direct_declarator: LEFT_PARENTHESES declarator • RIGHT_PARENTHESES

    RIGHT_PARENTHESES  shift, and go to state 39


State 26

   87 type_qualifier_list: type_qualifier •

    $default  reduce using rule 87 (type_qualifier_list)


State 27

   85 pointer: • ASTERISK type_qualifier_list_opt
   85        | ASTERISK type_qualifier_list_opt •  [IDENTIFIER, LEFT_PARENTHESES]
   86        | • ASTERISK type_qualifier_list_opt pointer
   86        | ASTERISK type_qualifier_list_opt • pointer

    ASTERISK  shift, and go to state 13

    $default  reduce using rule 85 (pointer)

    pointer  go to state 40


State 28

   68 type_qualifier: • CONST
   83 type_qualifier_list_opt: type_qualifier_list •  [IDENTIFIER, LEFT_PARENTHESES, ASTERISK]
   88 type_qualifier_list: type_qualifier_list • type_qualifier

    CONST  shift, and go to state 1

    $default  reduce using rule 83 (type_qualifier_list_opt)

    type_qualifier  go to state 41


State 29

   51 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON •

    $default  reduce using rule 51 (declaration)


State 30

   59 init_declarator_list: init_declarator_list COMMA • init_declarator
   60 init_declarator: • declarator
   61                | • declarator ASSIGNMENT initialiser
   69 declarator: • pointer direct_declarator
   70           | • direct_declarator
   72 direct_declarator: • IDENTIFIER
   73                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   74                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
   75                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
   76                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   77                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   78                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
   79                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
   80                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   81                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   82                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   85 pointer: • ASTERISK type_qualifier_list_opt
   86        | • ASTERISK type_qualifier_list_opt pointer

    IDENTIFIER        shift, and go to state 11
    LEFT_PARENTHESES  shift, and go to state 12
    ASTERISK          shift, and go to state 13

    init_declarator    go to state 42
    declarator         go to state 43
    direct_declarator  go to state 18
    pointer            go to state 19


State 31

    1 primary_expression: • IDENTIFIER
    2                   | • INTEGER_CONSTANT
    3                   | • CHARACTER_CONSTANT
    4                   | • STRING_LITERAL
    5                   | • LEFT_PARENTHESES expression RIGHT_PARENTHESES
    6 postfix_expression: • primary_expression
    7                   | • postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    8                   | • postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
    9                   | • postfix_expression ARROW IDENTIFIER
   10                   | • LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   11                   | • LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET
   16 unary_expression: • postfix_expression
   17                 | • unary_operator unary_expression
   18 unary_operator: • ASTERISK
   19               | • PLUS
   20               | • MINUS
   21               | • EXCLAMATION
   22               | • ADDRESS
   23 multiplicative_expression: • unary_expression
   24                          | • multiplicative_expression ASTERISK unary_expression
   25                          | • multiplicative_expression SLASH unary_expression
   26                          | • multiplicative_expression MODULO unary_expression
   27 additive_expression: • multiplicative_expression
   28                    | • additive_expression PLUS multiplicative_expression
   29                    | • additive_expression MINUS multiplicative_expression
   30 relational_expression: • additive_expression
   31                      | • relational_expression LESS_THAN additive_expression
   32                      | • relational_expression GREATER_THAN additive_expression
   33                      | • relational_expression LESS_EQUAL_THAN additive_expression
   34                      | • relational_expression GREATER_EQUAL_THAN additive_expression
   35 equality_expression: • relational_expression
   36                    | • equality_expression EQUALS relational_expression
   37                    | • equality_expression NOT_EQUALS relational_expression
   40 logical_AND_expression: • equality_expression
   41                       | • logical_AND_expression LOGICAL_AND M equality_expression
   42 logical_OR_expression: • logical_AND_expression
   43                      | • logical_OR_expression LOGICAL_OR M logical_AND_expression
   44 conditional_expression: • logical_OR_expression
   45                       | • logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression
   46 assignment_expression: • conditional_expression
   47                      | • unary_expression ASSIGNMENT assignment_expression
   61 init_declarator: declarator ASSIGNMENT • initialiser
   97 initialiser: • assignment_expression
   98            | • LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   99            | • LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET
